--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 DATABASE_URL="postgresql://sinsamuth:_Mothsikhao138ton@45.154.27.155:5553/carbon-credit"
+NEXTAUTH_SECRET="SinSamuthCarbonCreditChingMaiTechnicalCollege202555555"
