--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-DATABASE_URL="postgresql://sinsamuth:_Mothsikhao138ton@45.154.27.155:5553/carbon-credit"
-NEXTAUTH_SECRET="SinSamuthCarbonCreditChingMaiTechnicalCollege202555555"
-JSONWEBTOKEN_SECRET="ASKDHJHXZGCV.YUWEBEJXNV.UYWH.QEJRKKSDPCOVUHBWHern23iifyysdvj9237sdjxhsd0e4tomdnqw83450.32osdjfdf"
+DATABASE_URL=""
+NEXTAUTH_SECRET=""
+JSONWEBTOKEN_SECRET=""
